--- a/public/main/template/default/skill/criteria.html.twig
+++ b/public/main/template/default/skill/criteria.html.twig
@@ -1,4 +1,4 @@
-<h2 class="page-header">{{ 'BadgeDetails'|trans }}</h2>
+<h2 class="page-header">{{ 'Badge details'|trans }}</h2>
 <article>
     <div class="row">
         <div class="col-md-3">
@@ -19,7 +19,7 @@
             <p class="lead">{{ skill_info.title }}</p>
             <h4 class="title-badge">{{ 'Description'|trans }}</h4>
             <p>{{ skill_info.description }}</p>
-            <h4 class="title-badge">{{ 'CriteriaToEarnTheBadge'|trans }}</h4>
+            <h4 class="title-badge">{{ 'Criteria to earn the badge'|trans }}</h4>
             <p>{{ skill_info.criteria }}</p>
         </div>
     </div>
