--- a/public/main/template/default/skill/badge_list.html.twig
+++ b/public/main/template/default/skill/badge_list.html.twig
@@ -1,10 +1,10 @@
 <div class="col-md-12">
     <ul class="nav nav-tabs">
         <li>
-            <a href="{{ _p.web_main }}skills/skill_badge.php">{{ 'Home' | trans }}</a>
+            <a href="{{ _p.web_main }}skills/skill_badge.php">{{ 'Home'|trans }}</a>
         </li>
         <li class="active">
-            <a href="{{ _p.web_main }}skills/skill_badge_list.php">{{ "Current badges" | trans }}</a>
+            <a href="{{ _p.web_main }}skills/skill_badge_list.php">{{ "Current badges"|trans }}</a>
         </li>
     </ul>
     <div class="tab-content">
@@ -12,12 +12,12 @@
             <div class="openbadges-introduction">
                 <table class="table">
                     <thead>
-                        <tr>
-                            <th>{{ 'Badges' | trans }}</th>
-                            <th>{{ 'Name' | trans }}</th>
-                            <th>{{ 'Description' | trans }}</th>
-                            <th>{{ 'Actions' | trans }}</th>
-                        </tr>
+                    <tr>
+                        <th>{{ 'Badges'|trans }}</th>
+                        <th>{{ 'Name'|trans }}</th>
+                        <th>{{ 'Description'|trans }}</th>
+                        <th>{{ 'Detail'|trans }}</th>
+                    </tr>
                     </thead>
                     <tbody>
                     {% for skill in skills %}
@@ -31,7 +31,7 @@
                             <td>{{ skill.description }}</td>
                             <td>
                                 <a href="{{ _p.web_main }}skills/skill_badge_create.php?id={{ skill.id }}"
-                                   class="btn btn--primary btn-sm" title="{{ "Create badge" | trans }}">
+                                   class="btn btn--primary btn-sm" title="{{ "Create badge"|trans }}">
                                     <em class="fa fa-shield fa-fw"></em>
                                 </a>
                             </td>
