--- a/public/main/template/default/skill/profile_item.html.twig
+++ b/public/main/template/default/skill/profile_item.html.twig
@@ -1,22 +1,25 @@
 {% if profiles %}
-    <h4>{{ "SkillProfiles"|trans }}</h4>
+    <h4>{{ "Skill profiles"|trans }}</h4>
     <table class="table table-responsive table-condensed">
         <tbody>
-            {%for profile in profiles %}
-                <tr>
-                    <td>{{ profile.title }}</td>
-                    <td class="text-right">
-                        <div class="btn-group btn-group-sm">
-                            <button class="btn btn--plain btn-sm skill-wheel-load-profile" aria-label="{{ 'Search'|trans }}" title="{{ 'Search'|trans }}" data-id="{{ profile.id }}">
-                                <span class="fa fa-search" aria-hidden="true"></span>
-                            </button>
-                            <button class="btn btn--plain btn-sm skill-wheel-delete-profile" aria-label="{{ 'Delete'|trans }}" title="{{ 'Delete'|trans }}" data-id="{{ profile.id }}">
-                                <span class="fa fa-trash" aria-hidden="true"></span>
-                            </button>
-                        </div>
-                    </td>
-                </tr>
-            {% endfor %}
+        {% for profile in profiles %}
+            <tr>
+                <td>{{ profile.title }}</td>
+                <td class="text-right">
+                    <div class="btn-group btn-group-sm">
+                        <button class="btn btn--plain btn-sm skill-wheel-load-profile" aria-label="{{ 'Search'|trans }}"
+                                title="{{ 'Search'|trans }}" data-id="{{ profile.id }}">
+                            <span class="fa fa-search" aria-hidden="true"></span>
+                        </button>
+                        <button class="btn btn--plain btn-sm skill-wheel-delete-profile"
+                                aria-label="{{ 'Delete'|trans }}" title="{{ 'Delete'|trans }}"
+                                data-id="{{ profile.id }}">
+                            <span class="fa fa-trash" aria-hidden="true"></span>
+                        </button>
+                    </div>
+                </td>
+            </tr>
+        {% endfor %}
         </tbody>
     </table>
 {% endif %}
